--- a/shiro-jdbc/src/main/resource/shiro.ini
+++ b/shiro-jdbc/src/main/resource/shiro.ini
@@ -2,6 +2,14 @@
 DaphneOrdea=yyn
 
 [main]
-myRealm = com.phantom.realm.MyRealm
-#依赖注入
-securityManager.realm = $myRealm
+#jdbcRealm需要一个dataSource
+dataSource
+jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
+#jdbcRealm需要一个数据源
+jdbcRealm.dataSource=$dataSource
+#将jdbcRealm注入进securityManager
+securityManager.realm=$jdbcRealm
+
+
+
+
