--- a/shiro-jdbc/src/main/resource/shiro.ini
+++ b/shiro-jdbc/src/main/resource/shiro.ini
@@ -3,7 +3,7 @@ DaphneOrdea=yyn
 
 [main]
 #jdbcRealm需要一个dataSource
-dataSource
+dataSource=
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 #jdbcRealm需要一个数据源
 jdbcRealm.dataSource=$dataSource
