--- a/shiro-jdbc/src/main/resource/shiro.ini
+++ b/shiro-jdbc/src/main/resource/shiro.ini
@@ -1,15 +1,17 @@
-[users]
-DaphneOrdea=yyn
-
 [main]
 #jdbcRealm需要一个dataSource
-dataSource=
+dataSource=com.alibaba.druid.pool.DruidDataSource
+dataSource.driverClassName=com.mysql.jdbc.Driver
+dataSource.url=jdbc:mysql://localhost:3306/shiro
+dataSource.userName=root
+dataSource.password=root
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 #jdbcRealm需要一个数据源
 jdbcRealm.dataSource=$dataSource
 #将jdbcRealm注入进securityManager
 securityManager.realm=$jdbcRealm
 
-
+[users]
+DaphneOrdea=yyn
 
 
