--- a/shiro-jdbc/src/main/resource/shiro.ini
+++ b/shiro-jdbc/src/main/resource/shiro.ini
@@ -1,14 +1,17 @@
 [main]
-#jdbcRealm需要一个dataSource
+#采用第三方jdbcRealm连接数据库
+jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
+#实例化数据源
 dataSource=com.alibaba.druid.pool.DruidDataSource
+#设置参数
 dataSource.driverClassName=com.mysql.jdbc.Driver
-dataSource.url=jdbc:mysql://localhost:3306/shiro
+dataSource.url=jdbc:mysql://127.0.0.1:3306/shiro?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
 dataSource.userName=root
 dataSource.password=root
-jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
-#jdbcRealm需要一个数据源
+
+#将数据源设置到realm中
 jdbcRealm.dataSource=$dataSource
-#将jdbcRealm注入进securityManager
+jdbcRealm.permissionsLookupEnabled=true
 securityManager.realm=$jdbcRealm
 
 [users]
