修改jdbc-配置,使用编程式，可以使用验证

--- a/shiro-jdbc/src/main/resource/shiro.ini
+++ b/shiro-jdbc/src/main/resource/shiro.ini
@@ -11,7 +11,7 @@ dataSource.password=root
 
 #将数据源设置到realm中
 jdbcRealm.dataSource=$dataSource
-securityManager.realm=$jdbcRealm
+securityManager.realms=$jdbcRealm
 
 [users]
 DaphneOrdea=yyn
