--- a/shiro-jdbc/src/main/resource/log4j.properties
+++ b/shiro-jdbc/src/main/resource/log4j.properties
@@ -1,4 +1,5 @@
-log4j.rootLogger=debug,stdout
+#\u65E5\u5FD7\u8F93\u51FA\u7EA7\u522B
+log4j.rootLogger=info,stdout
 #\u63A7\u5236\u53F0\u6807\u51C6\u8F93\u51FA
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 #\u6807\u51C6\u6A21\u578B\u8BBE\u8BA1
