修改jdbc-配置,使用编程式，可以使用验证

--- a/shiro-jdbc/src/main/resource/log4j.properties
+++ b/shiro-jdbc/src/main/resource/log4j.properties
@@ -7,3 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #\u8F93\u51FA\u88C5\u6362\u683C\u5F0F
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m %n
 
+#\u8F93\u51FA\u5230E\u76D8\u7684log.log\u6587\u4EF6
+log4j.appender.B=org.apache.log4j.FileAppender
+log4j.appender.B.File=E:\\log.log
+log4j.appender.B.layout=org.apache.log4j.SimpleLayout
