--- a/shiro-jdbc/src/main/resource/log4j.properties
+++ b/shiro-jdbc/src/main/resource/log4j.properties
@@ -1,13 +1,12 @@
-#\u65E5\u5FD7\u8F93\u51FA\u7EA7\u522B
+#日志输出级别
 log4j.rootLogger=info,stdout,B
-#\u63A7\u5236\u53F0\u6807\u51C6\u8F93\u51FA
+#控制台输出
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#\u6807\u51C6\u6A21\u578B\u8BBE\u8BA1
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#\u8F93\u51FA\u88C5\u6362\u683C\u5F0F
+#格式化输出
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m %n
 
-#\u8F93\u51FA\u5230E\u76D8\u7684log.log\u6587\u4EF6
+#输出到E盘
 log4j.appender.B=org.apache.log4j.FileAppender
 log4j.appender.B.File=E:\\log.log
 log4j.appender.B.layout=org.apache.log4j.SimpleLayout
