自定义realm实现md5验证加密，配合数据库操作

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>shiro-jdbc</module>
         <module>shiro-realm</module>
         <module>shiro-md5</module>
+        <module>shiro-realm-md5</module>
     </modules>
 
     <!--导入依赖-->
