--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>shiro-realm</module>
         <module>shiro-md5</module>
         <module>shiro-realm-md5</module>
+        <module>shiro-roles</module>
     </modules>
 
     <!--导入依赖-->
